# PingPong

./: CMakeLists.txt
PingPongD2D/: CMakeLists.txt  PingPong.cpp
PingPongGDI/: CMakeLists.txt  PingPong.cpp  PingPong.h
PingPongGDI_Rewrite/: CMakeLists.txt  PingPong.cpp  PingPong.h
